--- a/index.html
+++ b/index.html
@@ -389,14 +389,11 @@
 
       <section class="page__content" itemprop="text">
         
-        <p>宇都宮大学教授「吉田 勝俊」の教材置き場．
+        <p><em style="color: red">パーサーの仕様変更に伴い，現在移行作業中です．しばらくお待ちください．</em>.</p>
+
+<p>宇都宮大学教授「吉田 勝俊」の教材置き場．
 授業や書籍のサポートページも兼ねちゃいます．</p>
 
-<h4 id="数式テスト">数式テスト</h4>
-<p><script type="math/tex">\begin{align*}
-\frac{\partial \theta}{\partial t}= \frac{\partial}{\partial z}
-\left[ K(\theta) \left (\frac{\partial \psi}{\partial z} + 1 \right) \right]\
-\end{align*}</script></p>
 
         
       </section>
