--- a/index.html
+++ b/index.html
@@ -389,11 +389,10 @@
 
       <section class="page__content" itemprop="text">
         
-        <p><em style="color: red">パーサーの変更に伴い，現在移行作業中です．しばらくお待ちください．</em></p>
+        <p><em>パーサーの変更に伴い，現在移行作業中です．しばらくお待ちください．</em></p>
 
 <p>宇都宮大学教授「吉田 勝俊」の教材置き場．
 授業や書籍のサポートページも兼ねちゃいます．</p>
-
 
         
       </section>
