--- a/lec/robo/index.html
+++ b/lec/robo/index.html
@@ -158,7 +158,7 @@
       
       
         <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-          <a href="https://ktysd.github.io/" itemprop="item"><span itemprop="name">ホーム</span></a>
+          <a href="https://ktysd.github.io/" itemprop="item"><span itemprop="name">Home</span></a>
           <meta itemprop="position" content="1" />
         </li>
         <span class="sep">/</span>
@@ -534,7 +534,7 @@
   </li>
   <li>第14週　研究課題（グループワーク２）　（<strong style="color: magenta">基セン</strong>）
     <ul>
-      <li>グループ課題　<a href="group-work/2017">»こちら</a></li>
+      <li>グループ課題　<a href="group-work-2017">»こちら</a></li>
       <li>学生による作品集　<a href="results">»動画リスト</a></li>
     </ul>
   </li>
