--- a/lec/scilab/index.html
+++ b/lec/scilab/index.html
@@ -158,7 +158,7 @@
       
       
         <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-          <a href="https://ktysd.github.io/" itemprop="item"><span itemprop="name">ホーム</span></a>
+          <a href="https://ktysd.github.io/" itemprop="item"><span itemprop="name">Home</span></a>
           <meta itemprop="position" content="1" />
         </li>
         <span class="sep">/</span>
