--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  Minimal Mistakes Jekyll Theme 4.10.1 by Michael Rose
+  Minimal Mistakes Jekyll Theme 4.10.0 by Michael Rose
   Copyright 2013-2018 Michael Rose - mademistakes.com | @mmistakes
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE.txt
@@ -31,6 +31,10 @@
 
 
 
+  
+
+  
+
 
 <link rel="canonical" href="https://ktysd.github.io/">
 
@@ -39,6 +43,16 @@
 
 
 
+
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "name": "吉田勝俊",
+      "url": "https://ktysd.github.io",
+      "sameAs": null
+    }
+  </script>
 
 
 
@@ -62,6 +76,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="https://ktysd.github.io/assets/css/main.css">
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
 <!--[if lte IE 9]>
   <style>
@@ -77,6 +92,7 @@
     }
   </style>
 <![endif]-->
+
 
 
     <!-- start custom head snippets -->
@@ -400,6 +416,7 @@
   
   
 </div>
+
     </div>
 
     
@@ -435,7 +452,7 @@
 
     
   <script src="https://ktysd.github.io/assets/js/main.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
 
 
