--- a/lec/mdyn/scilab/index.html
+++ b/lec/mdyn/scilab/index.html
@@ -141,7 +141,7 @@
       
       
         <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-          <a href="https://edu.katzlab.jp/" itemprop="item"><span itemprop="name">ホーム</span></a>
+          <a href="https://edu.katzlab.jp/" itemprop="item"><span itemprop="name">Home</span></a>
           <meta itemprop="position" content="1" />
         </li>
         <span class="sep">/</span>
