--- a/books/tz/index.html
+++ b/books/tz/index.html
@@ -434,7 +434,7 @@
 
 <h3 id="ダウンロード">ダウンロード</h3>
 <ul>
-  <li><a href="TokuZai2012-07-06b.pdf">»こちら</a> ※ページ数削減のためB5版にしました．</li>
+  <li>ページ数削減のためB5版にしました　<a href="TokuZai2012-07-06b.pdf">»こちら</a></li>
 </ul>
 
 <h3 id="お知らせ">お知らせ</h3>
