--- a/lec/robo/index.html
+++ b/lec/robo/index.html
@@ -394,7 +394,7 @@
               <ul class="toc__menu">
   <li><a href="#授業内容">授業内容</a></li>
   <li><a href="#プログラム例">プログラム例</a></li>
-  <li><a href="#お知らせ">お知らせ</a></li>
+  <li><a href="#学生による作品集">学生による作品集　</a></li>
 </ul>
             </nav>
           </aside>
@@ -510,11 +510,12 @@
   <li><a href="scilab">Scilab版</a></li>
 </ul>
 
-<h3 id="お知らせ">お知らせ</h3>
+<h3 id="学生による作品集">学生による作品集　</h3>
 
 <ul>
-  <li></li>
+  <li><a href="results">動画リスト</a></li>
 </ul>
+
 
         
       </section>
