--- a/lec/robo/results/index.html
+++ b/lec/robo/results/index.html
@@ -415,7 +415,7 @@
         <h3 id="2017年度">2017年度</h3>
 
 <ul>
-  <li><a href="../gw/2017">グループワークの課題 (問題4.4)</a></li>
+  <li><a href="../group-work-2017/">グループワークの課題 (問題4.4)</a></li>
   <li>青の制御入力は自由に設定可能とした．（環境と相手のパラメータは変更不可）</li>
 </ul>
 
@@ -484,7 +484,7 @@
 <h3 id="2016年度">2016年度</h3>
 
 <ul>
-  <li><a href="../gw/2016">グループワークの課題 (問題4.4)</a></li>
+  <li>グループワークの課題 (問題4.4)</li>
   <li>青の制御入力は自由に設定可能とした．（環境と相手のパラメータは変更不可）</li>
 </ul>
 
