--- a/lec/scilab/4/index.html
+++ b/lec/scilab/4/index.html
@@ -415,7 +415,7 @@
 
 <p>プログラム実行前に，必ず，Scilab コンソールの作業ディレクトリ(フォルダ)を「ドキュメント」に変更する。</p>
 
-<p>#### ディレクトリとは？</p>
+<h4 id="ディレクトリとは">ディレクトリとは？</h4>
 
 <ul>
   <li>フォルダの別称である．</li>
