--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -108,7 +108,7 @@
         </ul>
         
         <button class="greedy-nav__toggle hidden" type="button">
-          <span class="visually-hidden">メニュー</span>
+          <span class="visually-hidden">Menu</span>
           <div class="navicon"></div>
         </button>
         <ul class="hidden-links hidden"></ul>
@@ -136,7 +136,7 @@
 <nav class="nav__list">
   
   <input id="ac-toc" name="accordion-toc" type="checkbox" />
-  <label for="ac-toc">メニュー</label>
+  <label for="ac-toc">Menu</label>
   <ul class="nav__items">
     
       <li>
