--- a/lec/robo/group-work-2017/index.html
+++ b/lec/robo/group-work-2017/index.html
@@ -416,7 +416,7 @@
 
 <h3 id="グループ課題">グループ課題</h3>
 
-<p>配布資料「第4部 ロボット制御演習（PDFはこちら）」を参考に，</p>
+<p>配布資料「第4部 ロボット制御演習（<a href="/lec/robo/files/part4.pdf">PDFはこちら</a>）」を参考に，</p>
 
 <ul>
   <li>問題4.4</li>
