--- a/books/ds/index.html
+++ b/books/ds/index.html
@@ -425,7 +425,7 @@
 
 <ul>
   <li>[2018-03-16] サイトリニューアル</li>
-  <li>[2017-11-11] 重大な訂正を追加しました． » こちら «</li>
+  <li>[2017-11-11] 重大な訂正を追加しました．</li>
   <li>[2013-04-01] ひとまず開設！</li>
   <li>[2012-09-25] 開設準備開始</li>
 </ul>
