--- a/lec/mdyn/index.html
+++ b/lec/mdyn/index.html
@@ -410,36 +410,38 @@
   <dd><a href="slides/01.pdf">スライド.pdf</a></dd>
   <dt>第2週　力の合成と分解</dt>
   <dd><a href="slides/02.pdf">スライド.pdf</a></dd>
-  <dd><a href="ex/01.pdf">レポート出題（第１回）.pdf</a>　（提出用紙 <a href="files/ReportDaishi.pdf">PDF</a>，<a href="files/ReportDaishi.doc">Word</a>）</dd>
+  <dd>レポート出題（第１回）</dd>
   <dt>第3週　トルクとその合成</dt>
   <dd><a href="slides/03.pdf">スライド.pdf</a></dd>
   <dt>第4週　剛体に働く力</dt>
   <dd><a href="slides/04.pdf">スライド.pdf</a></dd>
-  <dd><a href="ex/02.pdf">レポート出題（第2回）.pdf</a>　（提出用紙 <a href="files/ReportDaishi.pdf">PDF</a>，<a href="files/ReportDaishi.doc">Word</a>）</dd>
+  <dd>レポート出題（第2回）</dd>
   <dt>第5週　剛体の重心１</dt>
   <dd><a href="slides/05.pdf">スライド.pdf</a></dd>
   <dt>第6週　剛体の重心２</dt>
   <dd><a href="slides/06.pdf">スライド.pdf</a></dd>
-  <dd><a href="ex/03.pdf">レポート出題（第3回）.pdf</a>　（提出用紙 <a href="files/ReportDaishi.pdf">PDF</a>，<a href="files/ReportDaishi.doc">Word</a>）</dd>
-  <dd>ついでにクリック！ <a href="https://docs.google.com/spreadsheet/viewform?formkey=dG9hT2ZmQnQ5V29fbXlzTHZBd2Z4VVE6MA">»中間アンケート</a></dd>
+  <dd>レポート出題（第3回）</dd>
+  <dd>
+    <p>ついでにクリック！ <a href="https://docs.google.com/spreadsheet/viewform?formkey=dG9hT2ZmQnQ5V29fbXlzTHZBd2Z4VVE6MA">»中間アンケート</a></p>
+  </dd>
   <dt>第7週　質点の運動</dt>
   <dd><a href="slides/07.pdf">スライド.pdf</a></dd>
   <dt>第8週　剛体の運動１</dt>
   <dd><a href="slides/08.pdf">スライド.pdf</a></dd>
   <dt>第9週　剛体の運動２</dt>
   <dd><a href="slides/09.pdf">スライド.pdf</a></dd>
-  <dd><a href="ex/04.pdf">レポート出題（第4回）.pdf</a>　（提出用紙 <a href="files/ReportDaishi.pdf">PDF</a>，<a href="files/ReportDaishi.doc">Word</a>）</dd>
+  <dd>レポート出題（第4回）</dd>
   <dt>第10週　運動量の保存則</dt>
   <dd><a href="slides/10.pdf">スライド.pdf</a></dd>
   <dd><a href="3d">»関連動画を見る！</a></dd>
   <dt>第11週　エネルギーの保存則</dt>
   <dd><a href="slides/11.pdf">スライド.pdf</a></dd>
-  <dd><a href="ex/05.pdf">レポート出題（第5回）.pdf</a>　（提出用紙 <a href="files/ReportDaishi.pdf">PDF</a>，<a href="files/ReportDaishi.doc">Word</a>）</dd>
+  <dd>レポート出題（第5回）</dd>
   <dt>第12週　ロボットの運動方程式</dt>
   <dd><a href="slides/12.pdf">スライド.pdf</a></dd>
   <dt>第13週　ロボットシミュレーション　※基盤セ</dt>
   <dd><a href="slides/13.pdf">スライド.pdf</a></dd>
-  <dd><a href="ex/06.pdf">レポート出題（第6回）.pdf</a>　（提出用紙 <a href="files/ReportDaishi.pdf">PDF</a>，<a href="files/ReportDaishi.doc">Word</a>）</dd>
+  <dd>レポート出題（第6回）</dd>
 </dl>
 
 <ul>
@@ -452,7 +454,7 @@
   <dd><a href="vib">»関連動画を見る！</a></dd>
   <dt>第15週　減衰比と固有振動数／共振現象</dt>
   <dd><a href="slides/15.pdf">スライド.pdf</a></dd>
-  <dd><a href="ex/07.pdf">レポート出題（第7回）.pdf</a>　（提出用紙 <a href="files/ReportDaishi.pdf">PDF</a>，<a href="files/ReportDaishi.doc">Word</a>）</dd>
+  <dd>レポート出題（第7回）</dd>
 </dl>
 
 <h3 id="テキストのダウンロード">テキストのダウンロード</h3>
