--- a/lec/gairon/index.html
+++ b/lec/gairon/index.html
@@ -404,6 +404,7 @@
     <ul>
       <li><a href="#Ｉ実施日程">Ｉ．実施日程</a></li>
       <li><a href="#Ⅱ成績評価について">Ⅱ．成績評価について</a></li>
+      <li><a href="#qrコード">QRコード</a></li>
     </ul>
   </li>
 </ul>
@@ -486,6 +487,9 @@
 </ol>
 
 <p>以上</p>
+
+<h3 id="qrコード">QRコード</h3>
+<p><img src="Gairon_QR_Code.png" alt="概論QR" /></p>
 
         
       </section>
