--- a/lec/gairon/index.html
+++ b/lec/gairon/index.html
@@ -430,25 +430,25 @@
 <td>1</td><td>4月11日</td><td>吉田</td><td>ガイダンス</td>
 </tr>
 <tr>
-<td>2</td><td>4月18日</td><td>高山</td><td rowspan="2">「マテリアル工学」：科学を基にしたマテリアル工学の役割と<br />応用分野における材料選定の方法論について解説する。</td>
+<td>2</td><td>4月18日</td><td>高山</td><td rowspan="2">「マテリアル工学」：科学を基にしたマテリアル工学の役割と応用分<br />野における材料選定の方法論について解説する。</td>
 </tr>
 <tr>
 <td>3</td><td>4月25日</td><td>高山</td>
 </tr>
 <tr>
-<td>4</td><td>5月2日</td><td>大谷</td><td rowspan="2">「三次元工学」：新しいものづくりとして注目されている三次元<br />プリンタ技術を３次元形状データの入力から出力まで解説する。</td>
+<td>4</td><td>5月2日</td><td>大谷</td><td rowspan="2">「三次元工学」：新しいものづくりとして注目されている三次元プリ<br />ンタ技術を３次元形状データの入力から出力まで解説する。</td>
 </tr>
 <tr>
 <td>5</td><td>5月9日</td><td>大谷</td>
 </tr>
 <tr>
-<td>6</td><td>5月16日</td><td>長谷川</td><td rowspan="2">「身近な流れ学」流体力学を基に航空、宇宙、環境、医療、スポー<br />ツ分野への応用を紹介する。</td>
+<td>6</td><td>5月16日</td><td>長谷川</td><td rowspan="2">「身近な流れ学」流体力学を基に航空、宇宙、環境、医療、スポーツ<br />分野への応用を紹介する。</td>
 </tr>
 <tr>
 <td>7</td><td>5月23日</td><td>長谷川</td>
 </tr>
 <tr>
-<td>8</td><td>5月30日</td><td>横田</td><td rowspan="2">「ロボット工学」：車輪型，腕型，脚型ロボットの運動と制御につい<br />て概説する。</td>
+<td>8</td><td>5月30日</td><td>横田</td><td rowspan="2">「ロボット工学」：車輪型，腕型，脚型ロボットの運動と制御について<br />概説する。</td>
 </tr>
 <tr>
 <td>9</td><td>6月6日</td><td>横田</td>
