--- a/lec/mdyn/index.html
+++ b/lec/mdyn/index.html
@@ -404,6 +404,7 @@
   <li><a href="#テキストのダウンロード">テキストのダウンロード</a></li>
   <li><a href="#プログラム例">プログラム例</a></li>
   <li><a href="#お知らせ">お知らせ</a></li>
+  <li><a href="#qrコード">QRコード</a></li>
 </ul>
             </nav>
           </aside>
@@ -489,6 +490,8 @@
   <li>[2012-02-06] このページを開設しました．</li>
 </ul>
 
+<h3 id="qrコード">QRコード</h3>
+<p><img src="QR_mdyn.png" alt="QRコード" /></p>
 
         
       </section>
