--- a/lec/mdyn/index.html
+++ b/lec/mdyn/index.html
@@ -435,7 +435,7 @@
       <td>2</td>
       <td>力の合成と分解</td>
       <td><a href="slides/02.pdf">スライド.pdf</a></td>
-      <td>第1回レポート <a href="ex/01.pdf">»提出用紙</a></td>
+      <td>第1回レポート <a href="ex/rep01.pdf">»提出用紙</a></td>
     </tr>
     <tr>
       <td>3</td>
