--- a/lec/mdyn/index.html
+++ b/lec/mdyn/index.html
@@ -435,7 +435,7 @@
       <td>2</td>
       <td>力の合成と分解</td>
       <td><a href="slides/02.pdf">スライド.pdf</a></td>
-      <td>第1回レポート <a href="ex/rep01.pdf">»提出用紙</a></td>
+      <td>第1回レポート <a href="ex/rep01.pdf">»提出用紙.pdf</a></td>
     </tr>
     <tr>
       <td>3</td>
@@ -447,7 +447,7 @@
       <td>4</td>
       <td>剛体に働く力</td>
       <td><a href="slides/04.pdf">スライド.pdf</a></td>
-      <td>第2回レポート</td>
+      <td>第2回レポート <a href="ex/rep02.pdf">»提出用紙.pdf</a></td>
     </tr>
     <tr>
       <td>5</td>
@@ -459,7 +459,7 @@
       <td>6</td>
       <td>剛体の重心２</td>
       <td><a href="slides/06.pdf">スライド.pdf</a></td>
-      <td>第3回レポート<br /><a href="https://docs.google.com/spreadsheet/viewform?formkey=dG9hT2ZmQnQ5V29fbXlzTHZBd2Z4VVE6MA">»中間アンケート</a></td>
+      <td>第3回レポート <a href="ex/rep03.pdf">»提出用紙.pdf</a><br /><a href="https://docs.google.com/spreadsheet/viewform?formkey=dG9hT2ZmQnQ5V29fbXlzTHZBd2Z4VVE6MA">»中間アンケート</a></td>
     </tr>
     <tr>
       <td>7</td>
@@ -477,7 +477,7 @@
       <td>9</td>
       <td>剛体の運動２</td>
       <td><a href="slides/09.pdf">スライド.pdf</a></td>
-      <td>第4回レポート</td>
+      <td>第4回レポート <a href="ex/rep04.pdf">»提出用紙.pdf</a></td>
     </tr>
     <tr>
       <td>10</td>
@@ -489,7 +489,7 @@
       <td>11</td>
       <td>エネルギーの保存則</td>
       <td><a href="slides/11.pdf">スライド.pdf</a></td>
-      <td>第5回レポート</td>
+      <td>第5回レポート <a href="ex/rep05.pdf">»提出用紙.pdf</a></td>
     </tr>
     <tr>
       <td>12</td>
@@ -501,7 +501,7 @@
       <td>13</td>
       <td>ロボットシミュレーション         <font color="red">※基盤セ</font></td>
       <td><a href="slides/13.pdf">スライド.pdf</a></td>
-      <td>第6回レポート</td>
+      <td>第6回レポート <a href="ex/rep06.doc">»提出用紙.doc</a></td>
     </tr>
     <tr>
       <td>14</td>
@@ -513,7 +513,7 @@
       <td>15</td>
       <td>減衰比と固有振動数／共振現象</td>
       <td><a href="slides/15.pdf">スライド.pdf</a></td>
-      <td>第7回レポート</td>
+      <td>第7回レポート <a href="ex/rep07.pdf">»提出用紙.pdf</a></td>
     </tr>
   </tbody>
 </table>
