--- a/lec/robo/schedule/index.html
+++ b/lec/robo/schedule/index.html
@@ -403,7 +403,7 @@
 
       <section class="page__content" itemprop="text">
         
-        <h1 id="ロボット力学-2018-スケジュール">ロボット力学 2018 スケジュール</h1>
+        <h1 id="ロボット力学-2018-スケジュール-">ロボット力学 2018 スケジュール <img src="../files/QR_robo_sched.png" alt="QRコード" /></h1>
 
 <table>
   <thead>
