--- a/lec/robo/schedule/index.html
+++ b/lec/robo/schedule/index.html
@@ -514,6 +514,10 @@
   </tbody>
 </table>
 
+<h3 id="レポート提出先">レポート提出先</h3>
+<ul>
+  <li>機械棟3階　システム力学研究室(2) のレポートBOX</li>
+</ul>
 
         
       </section>
