--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -397,14 +397,22 @@
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-file-alt"></i> 目次</h4></header>
               <ul class="toc__menu">
+  <li><a href="#重要なお知らせ">重要なお知らせ</a></li>
   <li><a href="#学習内容">学習内容</a></li>
   <li><a href="#テキスト">テキスト</a></li>
-  <li><a href="#お知らせ">お知らせ</a></li>
+  <li><a href="#過去のお知らせ">過去のお知らせ</a></li>
 </ul>
             </nav>
           </aside>
         
-        <h3 id="学習内容">学習内容</h3>
+        <h3 id="重要なお知らせ">重要なお知らせ</h3>
+
+<ul>
+  <li>[2018-10-08] テキストPDF 2018.10.08版をアップ(大量誤植訂正，数値例追加)．</li>
+  <li>[2018-10-01] テキストPDF 2018.10.01版をアップ(誤植訂正，14章追加)．</li>
+</ul>
+
+<h3 id="学習内容">学習内容</h3>
 
 <ul>
   <li>確率論の初歩(Kolmogorov, 1933)</li>
@@ -449,10 +457,9 @@
   <li>パラメータ推定への応用と拡張</li>
 </ol>
 
-<h3 id="お知らせ">お知らせ</h3>
+<h3 id="過去のお知らせ">過去のお知らせ</h3>
 
 <ul>
-  <li>[2018-10-01] テキストPDF 2018.10.01版をアップ(誤植訂正，14章追加)．</li>
   <li>[2017-11-14] テキストPDF 2017.11.14版をアップ(誤植訂正，特に11章)．</li>
   <li>[2017-10-02] テキストPDF 2017.10.2版をアップ(誤植訂正ほか)．</li>
   <li>[2016-10-04] テキストPDF 2016.10.4版を再アップ(誤植訂正)．</li>
