--- a/lec/robo/index.html
+++ b/lec/robo/index.html
@@ -455,12 +455,11 @@
           <li>複製が疑われるレポートはカンニングとみなす．</li>
         </ul>
       </li>
-      <li>第2回レポート用紙.pdf <a href="files/ReportDaishi.doc">(word)</a></li>
+      <li>第2回レポート用紙.pdf <a href="files/ReportDaishi.doc">(word)</a>
+<a href="files/part2sl-all.pdf">教師用.pdf</a></li>
     </ul>
   </li>
 </ul>
-
-<p><a href="files/part2sl-all.pdf">教師用.pdf</a></p>
 
 <h4 id="第３部配布資料pdf">第３部　<a href="files/part3.pdf">配布資料.pdf</a></h4>
 
@@ -478,7 +477,11 @@
           <li>複製が疑われるレポートはカンニングとみなす．</li>
         </ul>
       </li>
-      <li>第3回レポート用紙.pdf <a href="files/ReportDaishi.doc">(word)</a></li>
+      <li>第3回レポート用紙.pdf <a href="files/ReportDaishi.doc">(word)</a>
+        <ul>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeZUakkNoiTdmnOZVrrMbFdggoHSsGSJ_wqzf7_oLZeHHZf0g/viewform?formkey=dDVsZkZVZU5tT3dObHVUclIzTWQzREE6MA">»中間アンケートをお願いします</a> <font color="red">  ←ここよろしく！</font></li>
+        </ul>
+      </li>
     </ul>
   </li>
 </ul>
