--- a/lec/robo/scilab/index.html
+++ b/lec/robo/scilab/index.html
@@ -424,38 +424,38 @@
   <li>Code 4　車輪型倒立ロボット（単独）
     <ul>
       <li><a href="wip.sce">wip.sce</a></li>
-      <li><a href="wip-fall-free.sce.mp4">実行例の動画（制御なし）</a></li>
-      <li><a href="wip-fall-floor.sce.mp4">実行例の動画（制御あり）</a></li>
+      <li><a href="wip.sce.mp4">実行例の動画（制御なし）</a></li>
+      <li><a href="wip-ctrl.sce.mp4">実行例の動画（制御あり）</a></li>
     </ul>
   </li>
   <li>Code 5　床面をバウンドする棒
     <ul>
       <li><a href="stick.sce">stick.sce</a></li>
-      <li><a href="wip.sce.mp4">実行例の動画</a></li>
+      <li><a href="stick.sce.mp4">実行例の動画</a></li>
     </ul>
   </li>
   <li>Code 6　転倒する車輪型倒立ロボット（単独）
     <ul>
       <li><a href="wip-fall-free.sce">wip-fall-free.sce</a></li>
-      <li><a href="wip.sce.mp4">実行例の動画</a></li>
+      <li><a href="wip-fall-free.sce.mp4">実行例の動画</a></li>
     </ul>
   </li>
   <li>Code 7　床に転倒する車輪型倒立ロボット（単独）
     <ul>
       <li><a href="wip-fall-floor.sce">wip-fall-floor.sce</a></li>
-      <li><a href="wip.sce.mp4">実行例の動画</a></li>
+      <li><a href="wip-fall-floor.sce.mp4">実行例の動画</a></li>
     </ul>
   </li>
   <li>Code 8　車輪型倒立ロボット（２台結合）
     <ul>
       <li><a href="wip2.sce">wip2.sce</a></li>
-      <li><a href="wip.sce.mp4">実行例の動画</a></li>
+      <li><a href="wip2.sce.mp4">実行例の動画</a></li>
     </ul>
   </li>
   <li>Code 9　車輪型倒立ロボット（２台結合）の対戦
     <ul>
       <li><a href="wip2-bb.sce">wip2-bb.sce</a></li>
-      <li><a href="wip.sce.mp4">実行例の動画</a></li>
+      <li><a href="wip2-bb.sce.mp4">実行例の動画</a></li>
     </ul>
   </li>
 </ul>
