--- a/lec/robo/results/index.html
+++ b/lec/robo/results/index.html
@@ -407,6 +407,7 @@
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-file-alt"></i> 目次</h4></header>
               <ul class="toc__menu">
+  <li><a href="#2018年度">2018年度</a></li>
   <li><a href="#2017年度">2017年度</a></li>
   <li><a href="#2016年度">2016年度</a></li>
   <li><a href="#2015年度">2015年度</a></li>
@@ -416,7 +417,76 @@
             </nav>
           </aside>
         
-        <h3 id="2017年度">2017年度</h3>
+        <h3 id="2018年度">2018年度</h3>
+
+<ul>
+  <li><a href="../group-work-2018/">グループワークの課題 (問題4.4)</a></li>
+  <li>青の制御入力は自由に設定可能とした．（環境と相手のパラメータは変更不可）</li>
+</ul>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">グループ</th>
+      <th style="text-align: left">実行例</th>
+      <th style="text-align: left">備考</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">01</td>
+      <td style="text-align: left"><a href="v/robo2018-01.sce.mp4">mp4</a> <a href="v/robo2018-01.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">02</td>
+      <td style="text-align: left"><a href="v/robo2018-02.sce.mp4">mp4</a> <a href="v/robo2018-02.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">03</td>
+      <td style="text-align: left"><a href="v/robo2018-03.sce.mp4">mp4</a> <a href="v/robo2018-03.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">04</td>
+      <td style="text-align: left"><a href="v/robo2018-04.sce.mp4">mp4</a> <a href="v/robo2018-04.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">05</td>
+      <td style="text-align: left"><a href="v/robo2018-05.sce.mp4">mp4</a> <a href="v/robo2018-05.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">06</td>
+      <td style="text-align: left"><a href="v/robo2018-06.sce.mp4">mp4</a> <a href="v/robo2018-06.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">07</td>
+      <td style="text-align: left"><a href="v/robo2018-07.sce.mp4">mp4</a> <a href="v/robo2018-07.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">08</td>
+      <td style="text-align: left"><a href="v/robo2018-08.sce.mp4">mp4</a> <a href="v/robo2018-08.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">09</td>
+      <td style="text-align: left"><a href="v/robo2018-09.sce.mp4">mp4</a> <a href="v/robo2018-09.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left">10</td>
+      <td style="text-align: left"><a href="v/robo2018-10.sce.mp4">mp4</a> <a href="v/robo2018-10.sce.wmv">wmv</a></td>
+      <td style="text-align: left"> </td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="2017年度">2017年度</h3>
 
 <ul>
   <li><a href="../group-work-2017/">グループワークの課題 (問題4.4)</a></li>
@@ -857,7 +927,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2018 Katsutoshi Yoshida. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2019 Katsutoshi Yoshida. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
