--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -436,7 +436,11 @@
 
 <h3 id="テキスト">テキスト</h3>
 <ul>
-  <li><a href="files/probkal_fin_20181008.pdf">2018年版PDF</a></li>
+  <li><a href="https://drive.google.com/open?id=1ytR7B1TbhQdMlvfDbjjMKYdIV14UToH5">2018年版PDF(研究室限定)</a>
+    <ul>
+      <li>吉田研究室のメンバーがダウンロードできます．</li>
+    </ul>
+  </li>
 </ul>
 
 <p>目次：</p>
