--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -400,8 +400,7 @@
         <h3 id="重要なお知らせ">重要なお知らせ</h3>
 
 <ul>
-  <li>[2018-10-08] テキストPDF 2018.10.08版をアップ(大量誤植訂正，数値例追加)．</li>
-  <li>[2018-10-01] テキストPDF 2018.10.01版をアップ(誤植訂正，14章追加)．</li>
+  <li>[2019-09-20] テキストPDF 2019.09.20版をアップ(重大な誤植訂正，A４版)．</li>
 </ul>
 
 <h3 id="学習内容">学習内容</h3>
@@ -420,7 +419,7 @@
         <p><a href="scilab/video">動画集</a></p>
       </li>
       <li>
-        <p><a href="https://github.com/ktysd/test_prob-tut">プログラム例(Python3版)</a></p>
+        <p><a href="https://github.com/ktysd/prob-tut">プログラム例(Python3版)</a></p>
       </li>
     </ul>
   </li>
@@ -428,11 +427,7 @@
 
 <h3 id="テキスト">テキスト</h3>
 <ul>
-  <li><a href="https://drive.google.com/open?id=1ytR7B1TbhQdMlvfDbjjMKYdIV14UToH5">2018年版PDF(研究室限定)</a>
-    <ul>
-      <li>吉田研究室のメンバーがダウンロードできます．</li>
-    </ul>
-  </li>
+  <li><a href="https://drive.google.com/open?id=1-J7DpheChVpBnrI--OLlvGR_j-5wBiPb">2019年版PDF(学内限定)</a></li>
 </ul>
 
 <p>目次：</p>
@@ -456,6 +451,8 @@
 <h3 id="過去のお知らせ">過去のお知らせ</h3>
 
 <ul>
+  <li>[2018-10-08] テキストPDF 2018.10.08版をアップ(大量誤植訂正，数値例追加)．</li>
+  <li>[2018-10-01] テキストPDF 2018.10.01版をアップ(誤植訂正，14章追加)．</li>
   <li>[2017-11-14] テキストPDF 2017.11.14版をアップ(誤植訂正，特に11章)．</li>
   <li>[2017-10-02] テキストPDF 2017.10.2版をアップ(誤植訂正ほか)．</li>
   <li>[2016-10-04] テキストPDF 2016.10.4版を再アップ(誤植訂正)．</li>
