--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -400,6 +400,7 @@
         <h3 id="重要なお知らせ">重要なお知らせ</h3>
 
 <ul>
+  <li>[2019-09-24] テキストPDF 2019.09.24版をアップ(軽微な誤植訂正)．</li>
   <li>[2019-09-20] テキストPDF 2019.09.20版をアップ(重大な誤植訂正，A４版)．</li>
 </ul>
 
@@ -427,7 +428,7 @@
 
 <h3 id="テキスト">テキスト</h3>
 <ul>
-  <li><a href="https://drive.google.com/open?id=1-J7DpheChVpBnrI--OLlvGR_j-5wBiPb">2019年版PDF(学内限定)</a></li>
+  <li><a href="https://drive.google.com/open?id=12szHqb-w4jAnyuMotbpLWRMFYLSxXU-C">2019年版PDF(学内限定)</a></li>
 </ul>
 
 <p>目次：</p>
