--- a/lec/robo/index.html
+++ b/lec/robo/index.html
@@ -397,20 +397,20 @@
           </aside>
         
         
+<h1 id="ロボット力学">ロボット力学</h1>
+
 <p>宇都宮大学工学部 機械システム工学科 「ロボット力学」</p>
 
 <h3 id="重要なお知らせ">重要なお知らせ</h3>
 <ul>
   <li>週によって，講義室と基センを使い分けます　<a href="schedule">»場所と日程の一覧</a></li>
-  <li>
-    <p>レポート提出先： 機械棟3階システム力学研究室(2) のレポートBOX</p>
-  </li>
-  <li>
-    <font color="red"> 2019年1月23日(15回)を休講とし，1月12日に補講します．
-
-</font>
-  </li>
+  <li>レポート提出先： 機械棟3階システム力学研究室(2) のレポートBOX</li>
 </ul>
+
+<!---
+* <font color='red'> 2019年1月23日(15回)を休講とし，1月12日に補講します．
+--->
+
 <h3 id="授業内容">授業内容</h3>
 
 <ul>
@@ -490,7 +490,7 @@
     <ul>
       <li>4章の問題 4.x を全て，グループで解決せよ！
         <ul>
-          <li>特に，<a href="group-work-2018">レポート課題</a></li>
+          <li>特に，<a href="group-work-2019">レポート課題</a></li>
           <li>参考：学生による作品集　<a href="results">»動画リスト</a></li>
         </ul>
       </li>
@@ -504,7 +504,11 @@
   </li>
   <li>第15週　競技会（発表を含む）／まとめ
     <ul>
-      <li>第4回レポート課題　<a href="group-work-2018">»こちら</a></li>
+      <li><strong style="color: red">第4回レポート課題</strong>
+        <ul>
+          <li>詳細は<a href="group-work-2019">»こちら</a></li>
+        </ul>
+      </li>
       <li>第4回レポート用紙.pdf <a href="files/ReportDaishi.doc">(word)</a></li>
       <li>学生による作品集　<a href="results">»動画リスト</a></li>
     </ul>
