--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -428,13 +428,18 @@
 
 <h3 id="テキスト">テキスト</h3>
 <ul>
-  <li><a href="https://drive.google.com/open?id=12szHqb-w4jAnyuMotbpLWRMFYLSxXU-C">2019年版PDF(学内限定)</a></li>
+  <li>
+    <p>この講義の受講生は [ <a href="https://drive.google.com/open?id=12szHqb-w4jAnyuMotbpLWRMFYLSxXU-C">学内資料版</a> ] をダウンロードしてください．</p>
+  </li>
+  <li>
+    <p>学外の方は [ <a href="https://www.amazon.co.jp/exec/obidos/ASIN/B07XZ37TVS/">書籍版</a> ] をご利用ください．</p>
+  </li>
 </ul>
 
 <p>目次：</p>
 <ol>
   <li>状態推定とノイズの小話</li>
-  <li>確率空間</li>
+  <li>確率空間とは</li>
   <li>ランダム現象の例</li>
   <li>確率分布</li>
   <li>多変数の確率分布</li>
