--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -400,8 +400,7 @@
         <h3 id="重要なお知らせ">重要なお知らせ</h3>
 
 <ul>
-  <li>[2019-09-24] テキストPDF 2019.09.24版をアップ(軽微な誤植訂正)．</li>
-  <li>[2019-09-20] テキストPDF 2019.09.20版をアップ(重大な誤植訂正，A４版)．</li>
+  <li>[2019-09-30] テキストPDF 2019.09.30版をアップ(学内向けレイアウト調整)．</li>
 </ul>
 
 <h3 id="学習内容">学習内容</h3>
@@ -457,6 +456,7 @@
 <h3 id="過去のお知らせ">過去のお知らせ</h3>
 
 <ul>
+  <li>[2019-09-16] テキストPDF 2019版をアップ(重大な誤植訂正，A４版に変更)．</li>
   <li>[2018-10-08] テキストPDF 2018.10.08版をアップ(大量誤植訂正，数値例追加)．</li>
   <li>[2018-10-01] テキストPDF 2018.10.01版をアップ(誤植訂正，14章追加)．</li>
   <li>[2017-11-14] テキストPDF 2017.11.14版をアップ(誤植訂正，特に11章)．</li>
