--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -408,7 +408,8 @@
         <h3 id="重要なお知らせ">重要なお知らせ</h3>
 
 <ul>
-  <li>[2019-09-30] テキストPDF 2019.09.30版をアップ(学内向けレイアウト調整)．</li>
+  <li>[2019-10-07] C-Learning 利用開始</li>
+  <li>[2019-09-30] テキストPDF 2019.09.30版をアップ(学内向けレイアウト調整)</li>
 </ul>
 
 <h3 id="学習内容">学習内容</h3>
@@ -436,7 +437,7 @@
 <h3 id="テキスト">テキスト</h3>
 <ul>
   <li>
-    <p>この講義の受講生は [ <a href="https://udai.c-learning.jp/getfile/s3file/t/f2547890116">学内限定版(C-Learning)</a> ] をダウンロードしてください．</p>
+    <p>この講義の受講生は [ <a href="https://udai.c-learning.jp/getfile/s3file/s/f2547890116">学内限定版(C-Learning)</a> ] をダウンロードしてください．</p>
   </li>
   <li>
     <p>学外の方は [ <a href="https://www.amazon.co.jp/exec/obidos/ASIN/B07XZ37TVS/">書籍版</a> ] をご利用ください．</p>
