--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -440,7 +440,7 @@
     <p>この講義の受講生は [ <a href="https://udai.c-learning.jp/getfile/s3file/s/f2547890116">学内限定版(C-Learning)</a> ] をダウンロードしてください．</p>
   </li>
   <li>
-    <p>学外の方は [ <a href="https://www.amazon.co.jp/exec/obidos/ASIN/B07XZ37TVS/">書籍版</a> ] をご利用ください．</p>
+    <p>学外の方は [ <a href="/books/pb">書籍版</a> ] をご利用ください．</p>
   </li>
 </ul>
 
