--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -437,7 +437,7 @@
 <h3 id="テキスト">テキスト</h3>
 <ul>
   <li>
-    <p>この講義の受講生は [ <a href="https://udai.c-learning.jp/getfile/s3file/s/f2547890116">学内限定版(C-Learning)</a> ] をダウンロードしてください．</p>
+    <p>この講義の受講生は [ <a href="https://udai.c-learning.jp/">C-Learning</a> ] からダウンロードしてください．<br />(講義コードは 367092 です)</p>
   </li>
   <li>
     <p>学外の方は [ <a href="/books/pb">書籍版</a> ] をご利用ください．</p>
