--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -396,7 +396,7 @@
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-file-alt"></i> 目次</h4></header>
               <ul class="toc__menu">
-  <li><a href="#正誤表20191011以降">正誤表（2019/10/11以降）</a></li>
+  <li><a href="#正誤表">正誤表</a></li>
   <li><a href="#プログラム例">プログラム例</a></li>
   <li><a href="#お知らせ">お知らせ</a></li>
 </ul>
@@ -405,23 +405,32 @@
         
         <p>「Pythonでわかる確率論入門 ― 確率空間からカルマンフィルタまで」のサポートページです．</p>
 
-<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://www.amazon.co.jp/Python%E3%81%A7%E3%82%8F%E3%81%8B%E3%82%8B%E7%A2%BA%E7%8E%87%E8%AB%96%E5%85%A5%E9%96%80%E3%83%BC%E7%A2%BA%E7%8E%87%E7%A9%BA%E9%96%93%E3%81%8B%E3%82%89%E3%82%AB%E3%83%AB%E3%83%9E%E3%83%B3%E3%83%95%E3%82%A3%E3%83%AB%E3%82%BF%E3%81%BE%E3%81%A7-%E5%90%89%E7%94%B0-%E5%8B%9D%E4%BF%8A/dp/480209728X?SubscriptionId=0AVSM5SVKRWTFMG7ZR82&amp;tag=booklog.jp-22&amp;linkCode=xm2&amp;camp=2025&amp;creative=165953&amp;creativeASIN=480209728X" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/41nLovOOW0L._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://www.amazon.co.jp/Python%E3%81%A7%E3%82%8F%E3%81%8B%E3%82%8B%E7%A2%BA%E7%8E%87%E8%AB%96%E5%85%A5%E9%96%80%E3%83%BC%E7%A2%BA%E7%8E%87%E7%A9%BA%E9%96%93%E3%81%8B%E3%82%89%E3%82%AB%E3%83%AB%E3%83%9E%E3%83%B3%E3%83%95%E3%82%A3%E3%83%AB%E3%82%BF%E3%81%BE%E3%81%A7-%E5%90%89%E7%94%B0-%E5%8B%9D%E4%BF%8A/dp/480209728X?SubscriptionId=0AVSM5SVKRWTFMG7ZR82&amp;tag=booklog.jp-22&amp;linkCode=xm2&amp;camp=2025&amp;creative=165953&amp;creativeASIN=480209728X" target="_blank">[ペーパーバック版]<br />Pythonでわかる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://booklog.jp/author/%E5%90%89%E7%94%B0%E5%8B%9D%E4%BF%8A" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em">NextPublishing Authors Press</div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2019-10-18</div></div><div class="booklog_html_link_amazon"><a href="https://booklog.jp/item/1/480209728X" style="font-size:12px;" target="_blank">ブクログでレビューを見る»</a></div></td></tr></table></div>
+<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://amzn.to/31flXih" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/41nLovOOW0L._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://amzn.to/31flXih" target="_blank">[ペーパーバック版]<br />Pythonでわかる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://booklog.jp/author/%E5%90%89%E7%94%B0%E5%8B%9D%E4%BF%8A" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em">NextPublishing Authors Press</div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2019-10-18</div></div><div class="booklog_html_link_amazon"><a href="https://booklog.jp/item/1/480209728X" style="font-size:12px;" target="_blank">ブクログでレビューを見る»</a></div></td></tr></table></div>
 
-<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://www.amazon.co.jp/Python%E3%81%A7%E3%82%8F%E3%81%8B%E3%82%8B%E7%A2%BA%E7%8E%87%E8%AB%96%E5%85%A5%E9%96%80%E3%83%BC%E7%A2%BA%E7%8E%87%E7%A9%BA%E9%96%93%E3%81%8B%E3%82%89%E3%82%AB%E3%83%AB%E3%83%9E%E3%83%B3%E3%83%95%E3%82%A3%E3%83%AB%E3%82%BF%E3%81%BE%E3%81%A7-%E5%90%89%E7%94%B0-%E5%8B%9D%E4%BF%8A-ebook/dp/B07XZ37TVS?SubscriptionId=0AVSM5SVKRWTFMG7ZR82&amp;tag=booklog.jp-22&amp;linkCode=xm2&amp;camp=2025&amp;creative=165953&amp;creativeASIN=B07XZ37TVS" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/51%2BpAuaeMbL._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://www.amazon.co.jp/Python%E3%81%A7%E3%82%8F%E3%81%8B%E3%82%8B%E7%A2%BA%E7%8E%87%E8%AB%96%E5%85%A5%E9%96%80%E3%83%BC%E7%A2%BA%E7%8E%87%E7%A9%BA%E9%96%93%E3%81%8B%E3%82%89%E3%82%AB%E3%83%AB%E3%83%9E%E3%83%B3%E3%83%95%E3%82%A3%E3%83%AB%E3%82%BF%E3%81%BE%E3%81%A7-%E5%90%89%E7%94%B0-%E5%8B%9D%E4%BF%8A-ebook/dp/B07XZ37TVS?SubscriptionId=0AVSM5SVKRWTFMG7ZR82&amp;tag=booklog.jp-22&amp;linkCode=xm2&amp;camp=2025&amp;creative=165953&amp;creativeASIN=B07XZ37TVS" target="_blank">[Kindle版]<br />Pythonでわかる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://booklog.jp/author/%E5%90%89%E7%94%B0%E5%8B%9D%E4%BF%8A" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em"></div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2019-09-16</div></div><div class="booklog_html_link_amazon"><a href="https://booklog.jp/item/1/B07XZ37TVS" style="font-size:12px;" target="_blank">ブクログでレビューを見る»</a></div></td></tr></table></div>
+<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://amzn.to/32rvHrf" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/51%2BpAuaeMbL._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://amzn.to/32rvHrf" target="_blank">[Kindle版]<br />Pythonでわかる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://booklog.jp/author/%E5%90%89%E7%94%B0%E5%8B%9D%E4%BF%8A" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em"></div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2019-09-16</div></div><div class="booklog_html_link_amazon"><a href="https://booklog.jp/item/1/B07XZ37TVS" style="font-size:12px;" target="_blank">ブクログでレビューを見る»</a></div></td></tr></table></div>
 
-<h3 id="正誤表20191011以降">正誤表（2019/10/11以降）</h3>
+<h3 id="正誤表">正誤表</h3>
 
 <ul>
-  <li>まだ特にございません．</li>
+  <li><strong>2019/10/10まで (Kindle版のみ)</strong>
+    <ul>
+      <li><a href="https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md">https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md</a></li>
+    </ul>
+  </li>
+  <li><strong>2019/10/11から (共通)</strong>
+    <ul>
+      <li>誤植が見つかりましたら，ここに掲載します．</li>
+    </ul>
+  </li>
 </ul>
 
 <h3 id="プログラム例">プログラム例</h3>
 
 <ul>
-  <li>Jupyter Notebook (python3) <a href="https://github.com/ktysd/prob-tut">»こちら</a></li>
+  <li>開発環境：Jupyter Notebook + Python3 　<a href="https://github.com/ktysd/prob-tut">»ダウンロードサイト</a></li>
 </ul>
 
-<p>《関連記事》</p>
+<p><strong>《関連記事》</strong></p>
 <ul>
   <li><a href="https://qiita.com/ktsysd/items/97f75330f9492e727799">確率論のσ加法族（ほんとは有限だけど）の自動生成を Sympy で書いてみた！ - Qiita</a></li>
 </ul>
@@ -429,7 +438,7 @@
 <h3 id="お知らせ">お知らせ</h3>
 
 <ul>
-  <li>[2019-10-15] ペーパーバック版追加</li>
+  <li>[2019-10-15] ペーパーバック版(2019/10/18販売開始予定)追加</li>
   <li>[2019-10-07] ひとまず開設！</li>
 </ul>
 
