--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -414,7 +414,13 @@
 <ul>
   <li><strong>2019/10/10まで (Kindle版のみ)</strong>
     <ul>
-      <li><a href="https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md">https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md</a></li>
+      <li><a href="https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md">https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md</a>
+        <ul>
+          <li>
+            <font color="red">購入済みのコンテンツを，上記訂正後のものに更新できるようになりました（2019/10/18付）．「コンテンツと端末の管理」ページで「アップデートがあります」をクリックしてください．</font>
+          </li>
+        </ul>
+      </li>
     </ul>
   </li>
   <li><strong>2019/10/11から (共通)</strong>
