--- a/lec/robo/group-work-2019/index.html
+++ b/lec/robo/group-work-2019/index.html
@@ -440,7 +440,7 @@
     </tr>
     <tr>
       <td>メール宛先</td>
-      <td>yoshidak+robo@katzlab.jp</td>
+      <td>yoshidak+robo@katzlab.jp <font color="red">※コピペ推奨</font></td>
     </tr>
     <tr>
       <td>メール表題</td>
