--- a/lec/robo/results/index.html
+++ b/lec/robo/results/index.html
@@ -441,8 +441,8 @@
     </tr>
     <tr>
       <td style="text-align: left">02</td>
+      <td style="text-align: left"><a href="v/robo2019-02.sce.mp4">mp4</a></td>
       <td style="text-align: left"> </td>
-      <td style="text-align: left">未提出 2020/1/28 15:55</td>
     </tr>
     <tr>
       <td style="text-align: left">03</td>
@@ -461,8 +461,8 @@
     </tr>
     <tr>
       <td style="text-align: left">06</td>
+      <td style="text-align: left"><a href="v/robo2019-06.sce.mp4">mp4</a></td>
       <td style="text-align: left"> </td>
-      <td style="text-align: left">未提出 2020/1/28 15:55</td>
     </tr>
     <tr>
       <td style="text-align: left">07</td>
