--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -403,7 +403,12 @@
             </nav>
           </aside>
         
-        <p>「Pythonでわかる確率論入門 ― 確率空間からカルマンフィルタまで」のサポートページです．</p>
+        <p>「Pythonでわかる確率論入門―確率空間からカルマンフィルタまで」のサポートページです．</p>
+
+<ul>
+  <li>新タイトル<font color="red">『<u>ガチャではじめる</u>確率論入門 ― 確率空間からカルマンフィルタまで</font>』へ改題する手続きを進めております．（2020年2月5日〜）</li>
+  <li>旧タイトルで指摘されたミスリード部分『Pythonでわかる』を解消するための改題措置です．ご迷惑をおかけして申し訳ございません．</li>
+</ul>
 
 <div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://amzn.to/32rvHrf" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/51%2BpAuaeMbL._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://amzn.to/32rvHrf" target="_blank">[Kindle版]<br />Pythonでわかる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://booklog.jp/author/%E5%90%89%E7%94%B0%E5%8B%9D%E4%BF%8A" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em"></div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2019-09-16</div></div><div class="booklog_html_link_amazon"><a href="https://booklog.jp/item/1/B07XZ37TVS" style="font-size:12px;" target="_blank">ブクログでレビューを見る»</a></div></td></tr></table></div>
 
