--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -403,7 +403,17 @@
             </nav>
           </aside>
         
-        <p>「ガチャではじめる確率論入門―確率空間からカルマンフィルタまで」のサポートページです．</p>
+        <h4 id="202032-重要なお知らせ">2020/3/2 重要なお知らせ</h4>
+<ul>
+  <li>
+    <font color="red">Kindle版 69ページ図7.2 (a) のグラフ部分が表示されない不具合が出ており，Amazonが調査中です．解消するまで，販売を見合わせております．
+  ご迷惑をおかけして大変申し訳ございません．</font>
+  </li>
+  <li>ペーパーバック版に，不具合は出ておりません．</li>
+</ul>
+
+<hr />
+<p>「ガチャではじめる確率論入門―確率空間からカルマンフィルタまで」のサポートページです．</p>
 
 <ul>
   <li>旧タイトル「<u>Pythonでわかる</u>確率論入門―確率空間からカルマンフィルタまで」
