--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -85,6 +85,7 @@
 <link rel="icon" href="/favicon.ico">
 <!-- end custom head snippets -->
 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
   </head>
 
   <body class="layout--ktysd">
@@ -443,7 +444,7 @@
   </li>
   <li><strong>2019/10/11から (共通)</strong>
     <ul>
-      <li>誤植が見つかりましたら，ここに掲載します．</li>
+      <li><a href="/books/pb/errata/">正誤表</a></li>
     </ul>
   </li>
 </ul>
