--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <link rel="icon" href="/favicon.ico">
 <!-- end custom head snippets -->
 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
   </head>
 
   <body class="layout--ktysd">
