--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -454,7 +454,7 @@
 
 <ul>
   <li>[2020-03-07] Kindle版の入稿データ形式を改め再出版．Amazonの仕様で新版の扱いとなりました</li>
-  <li>[2020-03-02] Kindle版69ページ図7.2 (a) のグラフ部分が，一部端末で非表示となる不具合発生 →出版停止</li>
+  <li>[2020-03-02] Kindle版69ページ図7.2 (a) のグラフ部分が，一部端末で非表示となる不具合発生(一時出版停止)</li>
   <li>[2020-02-05] 改題して再販</li>
   <li>[2019-10-15] ペーパーバック版(2019/10/18販売開始予定)追加</li>
   <li>[2019-10-07] ひとまず開設！</li>
