--- a/lec/mdyn/index.html
+++ b/lec/mdyn/index.html
@@ -408,6 +408,15 @@
           </aside>
         
         
+<font color="red">
+2020年度は，コロナウイルスのため，メディア授業を行います．このページではなく，次のURLを参照してください．</font>
+<ul>
+  <li><a href="https://udai.c-learning.jp/s/">https://udai.c-learning.jp/s/</a> | Top &gt; 機械力学</li>
+</ul>
+
+<hr />
+<font color="red">以下は2019年度以前の古い内容です．2020年度は使用しません．</font>
+
 <p>宇都宮大学工学部 機械システム工学科 「機械力学」</p>
 
 <h3 id="授業内容">授業内容</h3>
