--- a/books/pb/errata/index.html
+++ b/books/pb/errata/index.html
@@ -408,12 +408,31 @@
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-file-alt"></i> 目次</h4></header>
               <ul class="toc__menu">
-  <li><a href="#正誤表20191011">正誤表　2019/10/11〜</a></li>
+  <li><a href="#-正誤表-20191011">◯ 正誤表 2019/10/11〜</a></li>
+  <li><a href="#-正誤表-2020429">◯ 正誤表 2020/4/29〜</a></li>
 </ul>
             </nav>
           </aside>
         
-        <h2 id="正誤表20191011">正誤表　2019/10/11〜</h2>
+        <h3 id="-正誤表-20191011">◯ 正誤表 2019/10/11〜</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: center"> </th>
+      <th style="text-align: center"><a href="https://www.amazon.co.jp/dp/B085HNM8CB/">Kindle版</a></th>
+      <th style="text-align: center"><a href="https://www.amazon.co.jp/dp/4802098200/">オンデマンド版</a></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center">改修申請</td>
+      <td style="text-align: center">◯</td>
+      <td style="text-align: center">☓</td>
+    </tr>
+  </tbody>
+</table>
+
 <ul>
   <li>[2020/03/03] 式(1.1)の前
     <ul>
@@ -424,19 +443,47 @@
   <li>[2020/03/03] 式(7.35)の前の式
     <ul>
       <li>誤）<script type="math/tex">\int_{0}^{A}\mathcal{N}(s;m,v)ds
-    =
-      \frac{1}{2}
-      \mathrm{erf}\left(\frac{m}{\sqrt{2 v}}\right)
-      +
-      \frac{1}{2}
-      \mathrm{erf}\left(\frac{m-A}{\sqrt{2 v}}\right)</script></li>
+      =
+        \frac{1}{2}
+        \mathrm{erf}\left(\frac{m}{\sqrt{2 v}}\right)
+        +
+        \frac{1}{2}
+        \mathrm{erf}\left(\frac{m-A}{\sqrt{2 v}}\right)</script></li>
       <li>正）<script type="math/tex">\int_{0}^{A}\mathcal{N}(s;m,v)ds
-    =
-      \frac{1}{2}
-      \mathrm{erf}\left(\frac{m}{\sqrt{2 v}}\right)
-      {\color{red}-}
-      \frac{1}{2}
-      \mathrm{erf}\left(\frac{m-A}{\sqrt{2 v}}\right)</script></li>
+      =
+        \frac{1}{2}
+        \mathrm{erf}\left(\frac{m}{\sqrt{2 v}}\right)
+        {\color{red}-}
+        \frac{1}{2}
+        \mathrm{erf}\left(\frac{m-A}{\sqrt{2 v}}\right)</script></li>
+    </ul>
+  </li>
+</ul>
+
+<h3 id="-正誤表-2020429">◯ 正誤表 2020/4/29〜</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: center"> </th>
+      <th style="text-align: center"><a href="https://www.amazon.co.jp/dp/B085HNM8CB/">Kindle版</a></th>
+      <th style="text-align: center"><a href="https://www.amazon.co.jp/dp/4802098200/">オンデマンド版</a></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center">改修申請</td>
+      <td style="text-align: center">☓</td>
+      <td style="text-align: center">☓</td>
+    </tr>
+  </tbody>
+</table>
+
+<ul>
+  <li>[2020/04/29] 全編
+    <ul>
+      <li>誤）背反</li>
+      <li>正）排反</li>
     </ul>
   </li>
 </ul>
