--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -421,7 +421,12 @@
 <h3 id="正誤表">正誤表</h3>
 
 <ul>
-  <li><strong>2019/10/10まで (Kindle版のみ)</strong>
+  <li><strong>2019/10/11から (共通)</strong>
+    <ul>
+      <li><a href="/books/pb/errata/">正誤表</a></li>
+    </ul>
+  </li>
+  <li><strong>2019/10/10以前 (Kindle版のみ)</strong>
     <ul>
       <li><a href="https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md">https://github.com/ktysd/prob-tut/blob/master/Errata_kindle.md</a>
         <ul>
@@ -430,11 +435,6 @@
           </li>
         </ul>
       </li>
-    </ul>
-  </li>
-  <li><strong>2019/10/11から (共通)</strong>
-    <ul>
-      <li><a href="/books/pb/errata/">正誤表</a></li>
     </ul>
   </li>
 </ul>
