--- a/books/pb/errata/index.html
+++ b/books/pb/errata/index.html
@@ -427,7 +427,7 @@
   <tbody>
     <tr>
       <td style="text-align: center">改修申請</td>
-      <td style="text-align: center">◯</td>
+      <td style="text-align: center">2020/3/5</td>
       <td style="text-align: center">☓</td>
     </tr>
   </tbody>
