--- a/lec/colab/1/index.html
+++ b/lec/colab/1/index.html
@@ -431,7 +431,7 @@
 <h3 id="google-アカウントの取得">Google アカウントの取得</h3>
 
 <ul>
-  <li>Colab (Google Colaboratory) は，Google のサービスなので，利用するには Google (Gmail) のアカウントが必要です．</li>
+  <li>Colab (Google Colaboratory) は，Google のサービスなので，Google (Gmail) のアカウントが必要になります．</li>
   <li>持ってない人は取得してください．（Androidスマホユーザーは持ってるはず）</li>
 </ul>
 
@@ -439,7 +439,7 @@
 
 <h3 id="colab-のインストール">Colab のインストール</h3>
 
-<p>Colab の全機能を利用するには，自分の Google アカウントで インストール操作が必要です．</p>
+<p>Colab の全機能を利用するには，自分の Google アカウントにインストールします．</p>
 
 <ul>
   <li>まず，自分のアカウントで「ドライブ」を起動します．</li>
